# nova-platform

./: README.md  pyproject.toml
nova_platform/: __init__.py
nova_platform/linux/: __init__.py
nova_platform/macos/: __init__.py  skills.py  tools.py
nova_platform/macos/skills/: __init__.py
nova_platform/macos/skills/apple-notes/: SKILL.md
nova_platform/macos/skills/apple-reminders/: SKILL.md
nova_platform/macos/skills/imessage/: SKILL.md
nova_platform/macos/skills/shortcuts/: SKILL.md
nova_platform/macos/skills/things-mac/: SKILL.md
nova_platform/mobile/: __init__.py
nova_platform/windows/: __init__.py
